--- a/crates/libcontainer/Cargo.toml
+++ b/crates/libcontainer/Cargo.toml
@@ -53,6 +53,7 @@ regex = "1.9.6"
 thiserror = "1.0.49"
 tracing = { version = "0.1.37", features = ["attributes"] }
 safe-path = "0.1.0"
+log = "*"
 
 [dev-dependencies]
 oci-spec = { version = "~0.6.2", features = ["proptests", "runtime"] }
