add write permissions
Signed-off-by: Jorge Prendes <jorge.prendes@gmail.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,6 +50,8 @@ jobs:
   release:
     name: Create Draft Release
     runs-on: ubuntu-20.04
+    permissions:
+      contents: write
     needs:
       - build
     steps:
